8238575: DragSourceEvent.getLocation() returns wrong value on HiDPI screens (Windows)

Reviewed-by: prr